--- a/year2-term2/web_development/Lab1/index.html
+++ b/year2-term2/web_development/Lab1/index.html
@@ -19,12 +19,21 @@
             <div class="challenge-header">
                 <h2>Challenge 1</h2>
             </div>
-            <p>Draw a rectangle in the console using stars.</p>
-            <div id="button1">
-                <span>Click Me</span>
-            </div>
-            <div>
-                <p>Output: <span></span></p>
+            <div class="content">
+                <p>Draw a rectangle in the console using stars.</p>
+    
+                <div id="button-container">
+                    <div class="measure-btn" id="button-width">
+                        <span>Width</span>
+                    </div>
+    
+                    <div class="measure-btn" id="button-height">
+                        <span>Height</span>
+                    </div>
+                </div>
+                <div>
+                    <p>Output: <span id="output1"></span></p>
+                </div>
             </div>
 
         </div>
