--- a/year2-term2/web_development/Lab1/index.html
+++ b/year2-term2/web_development/Lab1/index.html
@@ -23,16 +23,15 @@
                 <p>Draw a rectangle in the console using stars.</p>
     
                 <div id="button-container">
-                    <div class="measure-btn" id="button-width">
-                        <span>Width</span>
-                    </div>
-    
-                    <div class="measure-btn" id="button-height">
-                        <span>Height</span>
+                    <div class="start-btn" id="button-start">
+                        <span>Start</span>
                     </div>
                 </div>
                 <div>
-                    <p>Output: <span id="output1"></span></p>
+                    <p id="my-output">Output:
+                        <br>
+                        <span id="output1">
+                        </span></p>
                 </div>
             </div>
 
